# gallodoc-core

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  README.md  RELEASE_NOTES_0.1.0.md  RELEASE_NOTES_1.3.0.md  RELEASE_NOTES_1.5.0.md  RELEASE_NOTES_2.0.0.md  RELEASE_NOTES_2.1.0.md  RELEASE_NOTES_3.0.0.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  schema_question.md
.github/workflows/: test.yml
docs/: GALLODOC_CORE_V1_FROZEN.md  ai-usage-ledger.md  artifacts.md  examples.md  gallodoc-core-v1.md  gallodoc-units-v1.md  gallounits-v1.md  gstp-v1.md  index.md  open-core-vs-enterprise.md  privacy-and-safety.md
docs/migration/: v1-to-v3.md
docs/positioning/: connector-guide.md  linker-guide.md  pdf-on-steroids.md  privacy-and-governance-guide.md  semantic-encoder-guide.md  training-guide.md  what-is-gallodoc.md
docs/specs/: gallodoc-access-control-v2.md  gallodoc-artifact-bom-v2.md  gallodoc-compute-trace-v2.md  gallodoc-connector-lineage-v2.md  gallodoc-core-master.md  gallodoc-core-v1.1-execution-governance.md  gallodoc-core-v1.2-consent-custody-attestation.md  gallodoc-core-v1.3-residency-training-model-risk.md  gallodoc-core-v1.4-agent-observability.md  gallodoc-core-v1.5-trust-decision.md  gallodoc-core-v1.6-agent-supply-chain-security.md  gallodoc-core-v2.0-master-spec.md  gallodoc-core-v3-aibi-planner.md  gallodoc-core-v3-connector-sdk.md  gallodoc-core-v3-embeddings.md  gallodoc-core-v3-federation.md  gallodoc-core-v3-linker.md  gallodoc-core-v3-master-spec.md  (+12 more)
examples/: gallodoc_audio_call_recording.json  gallodoc_certified_export_gstp_reference.json  gallodoc_connector_salesforce_record.json  gallodoc_external_evidence_packet.json  gallodoc_fhir_patient_record.json  gallodoc_image_insurance_card.json  gallodoc_sql_claim_row.json  gallodoc_video_procedure_clip.json  gallodoc_website_compliance_scan.json
gallodoc/: __init__.py  conversion.py  markdown.py  markdown_renderer.py
scripts/: evaluate_gallodoc_embedder.py  release_safety_gate.py  train_gallodoc_embedder.py
tests/: conftest.py  test_ai_usage.py  test_artifacts.py  test_cli.py  test_compliance_v12_privacy.py  test_conversion.py  test_gallomarkdown.py  test_gallomarkdown_renderer.py  test_gstp.py  test_projections.py  test_unit_classifier.py  test_units.py  test_validation.py  test_validation_v20.py
(+244 files in other folders)
